Add @bancoin/ts-lib-crypto dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@bancoin/money-like-to-node": "git://github.com/Bancoinplatform/money-like-to-node.git#31c696c",
     "@bancoin/ts-types": "git://github.com/Bancoinplatform/ts-types.git#62399c3",
     "@bancoin/bancoin-transactions": "git://github.com/Bancoinplatform/bancoin-transactions.git#3ef9915",
+    "@bancoin/ts-lib-crypto": "git://github.com/Bancoinplatform/ts-lib-crypto.git#a910dc6",
     "ramda": "^0.25.0"
   },
   "scripts": {
